package be.kdg.youthcouncil.domain.moduleItems;

public enum Label {
    NEW, NOT_INCLUDED, INCLUDED, IN_PROGRESS, REALISED
}
