package be.kdg.youthcouncil.utility;


public enum Emoji {
    LIKE("👍"), HEART("❤️"), ROCKET("🚀"), POOP("💩"), SKELETON("💀");

    Emoji(String s) {

    }


}
