package be.kdg.youthcouncil.utility;

public interface Subscriber {
    void update();
}
